Fix dropdown position on firefox

--- a/frontend/src/modules/knowledge-library/styles.scss
+++ b/frontend/src/modules/knowledge-library/styles.scss
@@ -1030,7 +1030,7 @@
 }
 
 @media screen and (min-device-width: 1200px) and (max-device-width: 1600px) {
-  .ant-select-dropdown,
+  .multiselection-dropdown,
   .ant-picker-dropdown {
     zoom: 80%;
 
