--- a/frontend/src/modules/stakeholder-overview/styles.scss
+++ b/frontend/src/modules/stakeholder-overview/styles.scss
@@ -1119,7 +1119,7 @@
 }
 
 @media screen and (min-device-width: 1200px) and (max-device-width: 1600px) {
-  .ant-select-dropdown {
+  .multiselection-dropdown {
     zoom: 80%;
     @-moz-document url-prefix() {
       transform: scale(0.8);
